Solved dropdown language on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -4189,6 +4189,7 @@ Created using IcoMoon - icomoon.io
     .sidebar-collapse .navbar .navbar-nav.navbar-logo {
       top: 0;
       height: 53px; }
+      
   .sidebar-collapse .navbar .dropdown.show .dropdown-menu,
   .sidebar-collapse .navbar .dropdown .dropdown-menu {
     background-color: transparent;
@@ -4203,16 +4204,18 @@ Created using IcoMoon - icomoon.io
     overflow-y: scroll; }
     .sidebar-collapse .navbar .dropdown.show .dropdown-menu:before,
     .sidebar-collapse .navbar .dropdown .dropdown-menu:before {
-      display: none; }
+      display: none; }/*
   .sidebar-collapse .navbar .dropdown .dropdown-item {
     padding-left: 2.5rem; }
   .sidebar-collapse .navbar .dropdown .dropdown-menu {
     display: none; }
   .sidebar-collapse .navbar .dropdown.show .dropdown-menu {
     display: block; }
+    */
   .sidebar-collapse .navbar .dropdown-menu .dropdown-item:focus,
   .sidebar-collapse .navbar .dropdown-menu .dropdown-item:hover {
     color: #FFFFFF; }
+    
   .sidebar-collapse .navbar .navbar-translate {
     width: 100%;
     position: relative;
